--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
 		"prettier": "^2.8.4",
 		"prettier-plugin-astro": "0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.3",
-		"stylelint": "^15.2.0",
+		"rollup": "^3.17.3",
+		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.5",
-		"stylelint-config-standard": "^30.0.1",
+		"stylelint-config-standard": "^29.0.0",
 		"tailwindcss": "^3.2.7",
 		"typescript": "^4.9.5"
 	},
